# tamagotchi-

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  Pseudocode.txt  README.md  tama  tama_save.txt  tamagotchi-bb.cpp  tamagotchi-cplt-2.cpp  tamagotchi-cplt.cpp  tamagotchi-gmn.cpp  tamagotchi-gpt.cpp  tamagotchi.cpp  tamagotchi.sav
